# template-python-library

./: .editorconfig  .gitignore  .lefthook.yml  .renovaterc.json  README.md  committed.toml  pyproject.toml
.github/workflows/: build.yml
.zed/: settings.json
src/template_python_library/: __init__.py  __main__.py
tests/: test_add.py
